catching up on the archiving. Added a ton of shows and im too lazy to write them all but I thumbs upped them on the discord so if its not there then I didnt add it

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                   <li>Stroyent <br><a class="alert-link" href="https://archive.org/details/stroyent-rt">https://archive.org/details/stroyent-rt</a></li>
                   <li>One Minute Melee <br><a class="alert-link" href="https://archive.org/details/one-minute-melee-link-vs-sora-zelda-vs-kingdom-hearts-60fps-whu-e-8ou-wdi-q">https://archive.org/details/one-minute-melee...</a></li>
                   <li>Ten Little Roosters <br><a class="alert-link" href="https://archive.org/details/ten-little-roosters-episode-1-and-then-there-were-nine-4-k/Ten+Little+Roosters+-+Episode+1_+And+Then+There+Were+Nine+4K.mp4">https://archive.org/details/ten-little-roosters...</a></li>
+                  <li>RT Showcase: The Ocean Maker <br><a class="alert-link" href="https://archive.org/details/rt-showcase-ocean-maker">https://archive.org/details/rt-showcase-ocean-maker</a></li>
+                  <li>Past Cast <br><a class="alert-link" href="https://archive.org/details/past-cast-john-smith-and-pocahontas-thanksgiving-video-blog-soolx-khug-ki/Past+Cast+Bloopers+Part+2+%5B1370%5D.mkv">https://archive.org/details/past-cast...</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="fh-archived">
@@ -121,6 +123,7 @@
                     <li>Funhaus 2019 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2019">https://archive.org/details/funhaus_2019</a></li>
                     <li>Funhaus 2020 <br><a class="alert-link"  href="https://archive.org/details/funhaus_2020">https://archive.org/details/funhaus_2020</a></li>
                     <li>Theatre Mode <br><a class="alert-link" href="https://archive.org/details/theater-mode-funhaus">https://archive.org/details/theater-mode-funhaus</a></li>
+                    <li>1 Dollar 1 Hour <br><a class="alert-link"  href="https://archive.org/details/2015-10-18-ju-1sd-rjdm-i-monkey-murder-1-dollar-1-hour-gameplay">https://archive.org/details/2015-10-18-ju-1sd-rjdm-i-monkey-murder-1-dollar-1-hour-gameplay</a></li>
                 </ul>
               </div>
               <div class="container frostedglass mb-3" id="podcasts-archived">
@@ -218,6 +221,8 @@
                   <li>Imaginary Achievements <br><a class="alert-link" href="https://archive.org/details/imaginary-achievements-rooster-teeth">https://archive.org/details/imaginary-achievements-rooster-teeth</a></li>
                   <li>Cloudberry Kingdom <br><a class="alert-link" href="https://archive.org/details/cloudberry-kingdom_202403">https://archive.org/details/cloudberry-kingdom_202403</a></li>
                   <li>Between The Games <br><a class="alert-link" href="https://archive.org/details/jenga-the-movie-u-zdica-eqm-uk_20240308_1535">https://archive.org/details/jenga-the-movie-u-zdica-eqm-uk_20240308_1535</a></li>
+                  <li>Achievement Hunter Wrestling <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-wrestling-FIRST">https://archive.org/details/achievement-hunter-wrestling-FIRST</a></li>
+                  <li>MegaCraft <br><a class="alert-link" href="https://archive.org/details/megacraft-rooster-teeth">https://archive.org/details/megacraft-rooster-teeth</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="ff-archived">
@@ -226,6 +231,10 @@
                 </p><ul>
                   <li>Does It Do? <br><a class="alert-link" href="https://archive.org/details/s-1-e-1-does-it-do-no-stitch">https://archive.org/details/s-1-e-1-does-it-do-no-stitch</a></li>
                   <li>Regulation Animation <br><a class="alert-link" href="https://archive.org/details/s-1-e-3-banged-up-bike-rides/S1E1+The+Vancouver+Child+Kicker.mp4">https://archive.org/details/s-1-e-3-banged-up-bike-rides...</a></li>
+                  <li>F**KFACE OFF <br><a class="alert-link" href="https://archive.org/details/fkface-off-first">https://archive.org/details/fkface-off-first</a></li>
+                  <li>F**KFACE Supplemental <br><a class="alert-link" href="https://archive.org/details/e-23-fkface-8-hour-8-k-fireplace/E1+Geoff's+Bike+Stunt.mp4">https://archive.org/details/e-23-fkface-8-hour-8-k-fireplace/E1+Geoff's+Bike+Stunt.mp4</a></li>
+                  <li>F**KFACE Breaks Shit <br><a class="alert-link" href="https://archive.org/details/e-31-fkface-break-show-1-8/E1+F＊＊kface+Breaks+Sh＊t.mp4">https://archive.org/details/e-31-fkface-break-show-1-8/E1+F＊＊kface+Breaks+Sh＊t.mp4</a></li>
+                  <li>Regulation Gameplay Immortality <br><a class="alert-link" href="https://archive.org/details/f--kface-regulation-gameplay-immortality-first">https://archive.org/details/f--kface-regulation-gameplay-immortality-first</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="sp7-archived">
@@ -240,6 +249,7 @@
                 <p class="fs-4 runguszone">Inside Gaming:
                 </p><ul>
                   <li>Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
+                  <li>Inside Gaming Public Livestreams <br><a class="alert-link" href="https://archive.org/details/inside-gaming-youtube-public-livestreams-rooster-teeth/Satisfactory+with+Conor!+%5BTJUL5XsVcsw%5D.mp4">https://archive.org/details/inside-gaming-youtube-public-livestreams...</a></li>
                 </ul>
               </div>
               <div class="container frostedglass" id="music-archived">
