added social media container and ANMA instagram

--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
                 <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
                 <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
               </div>
+              <div class="container frostedglass mb-3" id="com-archived">
+                <!-- Social Media -->
+                <p class="fs-4 runguszone">Miscellaneous:
+                </p><ul>
+                  <li>ANMA Instagram <br><a class="alert-link" href="https://archive.org/details/anma-instagram">https://archive.org/details/anma-instagram</a></li>
+                </ul>
+                <hr>
+                <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
+                <p class="text-center runguszone fs-5"><a href="#" class="alert-link">[down for right now :( - coming back soon]</a></p>
+              </div>
             </div>
             <div class="col">
               <!-- 
