did a oopsie woopsie fucky wucky, fixed tho

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </div>
               <div class="container frostedglass mb-3" id="com-archived">
                 <!-- Social Media -->
-                <p class="fs-4 runguszone">Miscellaneous:
+                <p class="fs-4 runguszone">Social Media:
                 </p><ul>
                   <li>ANMA Instagram <br><a class="alert-link" href="https://archive.org/details/anma-instagram">https://archive.org/details/anma-instagram</a></li>
                 </ul>
