added regulation gameplay

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                   <li>F**KFACE Supplemental <br><a class="alert-link" href="https://archive.org/details/e-23-fkface-8-hour-8-k-fireplace/E1+Geoff's+Bike+Stunt.mp4">https://archive.org/details/e-23-fkface-8-hour-8-k-fireplace/E1+Geoff's+Bike+Stunt.mp4</a></li>
                   <li>F**KFACE Breaks Shit <br><a class="alert-link" href="https://archive.org/details/e-31-fkface-break-show-1-8/E1+F＊＊kface+Breaks+Sh＊t.mp4">https://archive.org/details/e-31-fkface-break-show-1-8/E1+F＊＊kface+Breaks+Sh＊t.mp4</a></li>
                   <li>Regulation Gameplay Immortality <br><a class="alert-link" href="https://archive.org/details/f--kface-regulation-gameplay-immortality-first">https://archive.org/details/f--kface-regulation-gameplay-immortality-first</a></li>
+                  <li>Regulation Gameplay <br><a class="alert-link" href="https://archive.org/details/e-18-trying-not-to-place-bronze-in-halo-ranked-regulation-gameplay/E1+Regulation+Gameplay+⧸⧸+Worms+⧸⧸+We're+the+New+Management.mp4">https://archive.org/details/e-18-trying-not-to-place-bronze-in-halo-ranked...</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="sp7-archived">
