--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
                   <li>This Is... <br><a class="alert-link" href="https://archive.org/details/this-is...-rooster-teeth">https://archive.org/details/this-is...-rooster-teeth</a></li>
                   <li>Imaginary Achievements <br><a class="alert-link" href="https://archive.org/details/imaginary-achievements-rooster-teeth">https://archive.org/details/imaginary-achievements-rooster-teeth</a></li>
                   <li>Cloudberry Kingdom <br><a class="alert-link" href="https://archive.org/details/cloudberry-kingdom_202403">https://archive.org/details/cloudberry-kingdom_202403</a></li>
+                  <hr>
+                  <p class="fs-5 runguszone text-center">Minecraft</p>
+                  <li>Ep 1-33 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210">https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210</a></li>
+                  <li>Ep 34-86 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-2-achievement-hunter">https://archive.org/details/lets-play-minecraft-season-2-achievement-hunter</a></li>
+                  <li>Ep 87-136 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-3-achievement-hunter">https://archive.org/details/lets-play-minecraft-season-3-achievement-hunter</a></li>
+                  <li>Ep 137-187 <br><a class="alert-link" href="https://archive.org/details/cloudberry-kingdom_202403">https://archive.org/details/lets-play-minecraft-season-4-achievement-hunter</a></li>
                 </ul>
               </div>
               <div class="container mb-3 frostedglass" id="ff-archived">
