add anchor for minecraft for the NERDS

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                   <li>Achievement Hunter Wrestling <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-wrestling-FIRST">https://archive.org/details/achievement-hunter-wrestling-FIRST</a></li>
                   <li>MegaCraft <br><a class="alert-link" href="https://archive.org/details/megacraft-rooster-teeth">https://archive.org/details/megacraft-rooster-teeth</a></li>
                   <hr>
-                  <p class="fs-5 runguszone text-center">Minecraft</p>
+                  <p class="fs-5 runguszone text-center" id="ah-minecraft">Minecraft</p>
                   <li>Ep 1-33 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210">https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210</a></li>
                   <li>Ep 34-86 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-2-achievement-hunter">https://archive.org/details/lets-play-minecraft-season-2-achievement-hunter</a></li>
                   <li>Ep 87-136 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-3-achievement-hunter">https://archive.org/details/lets-play-minecraft-season-3-achievement-hunter</a></li>
