add periscope archive and screwattack the industry. also formatting change :)

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                 <!-- SCREW ATTACK -->
                 <p class="fs-4 runguszone">Screw Attack:
                 </p><ul>
-                  <li>Greatest Moments in Gaming History<br><a class="alert-link" href="https://archive.org/details/screw-attack-greatest-moments-in-gaming">https://archive.org/details/screw-attack-greatest-moments-in-gaming</a></li>
+                  <li>Greatest Moments in Gaming History <br><a class="alert-link" href="https://archive.org/details/screw-attack-greatest-moments-in-gaming">https://archive.org/details/screw-attack-greatest-moments-in-gaming</a></li>
+                  <li>The Industry <br><a class="alert-link" href="https://archive.org/details/screw-attack-the-industry">https://archive.org/details/screw-attack-the-industry</a></li>
                 </ul>
               </div>
               <div class="container frostedglass mb-3" id="com-archived">
@@ -257,6 +258,7 @@
                   <li>Achievement Hunter Wrestling <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-wrestling-FIRST">https://archive.org/details/achievement-hunter-wrestling-FIRST</a></li>
                   <li>MegaCraft <br><a class="alert-link" href="https://archive.org/details/megacraft-rooster-teeth">https://archive.org/details/megacraft-rooster-teeth</a></li>
                   <li>The PainStation <br><a class="alert-link" href="https://archive.org/details/lets-play-the-pain-station">https://archive.org/details/lets-play-the-pain-station</a></li>
+                  <li>AH Periscope Archive <br><a class="alert-link" href="https://archive.org/details/achievement-hunter-periscope-rooster-teeth">https://archive.org/details/achievement-hunter-periscope-rooster-teeth</a></li>
                   <hr>
                   <p class="fs-5 runguszone text-center" id="ah-minecraft">Minecraft</p>
                   <li>Ep 1-33 <br><a class="alert-link" href="https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210">https://archive.org/details/lets-play-minecraft-season-1-achievement-hunter_202210</a></li>
