--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 </p><ul>
                   <li>Default Community Avatars + Avatars of Cast Members <br><a class="alert-link" href="https://archive.org/details/RTAvA">https://archive.org/details/RTAvA</a></li>
                   <li>Achievement City <br><a class="alert-link" href="https://archive.org/details/achievement-city">https://archive.org/details/achievement-city</a></li>
+                  <li>anarchymeanything.com <br><a class="alert-link" href="https://archiveofpimps.com/anma/">https://archiveofpimps.com/anma/</a></li>
                 </ul>
                 <hr>
                 <p class="text-center runguszone">Some RT channels were also dumped on "The Eye", go check that out!</p>
