fix hits counter on anma site

--- a/anma/index.html
+++ b/anma/index.html
@@ -74,7 +74,7 @@ Good News, Ratman! (coming soon)<br>
 </center>
 
 <br><br>
-<a href="https://www.freecounterstat.com/" title="hits counter"><img src="index_files/freecounterstat" border="0" title="hits counter" alt="hits counter" j99o1734a=""></a>
+<a href="https://www.freecounterstat.com/" title="hits counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=uf3ljnsky8a6mstneru1wys45dgbe3bg" border="0" title="hits counter" alt="hits counter" j99o1734a=""></a>
 <br><br>
 <!--POWERED BY TORGARD-->
 </body></html>
