add rwby soundtracks

--- a/index.html
+++ b/index.html
@@ -308,8 +308,11 @@
                   <li>RvB S13 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S13-OST">https://archive.org/details/RVB-S13-OST</a></li>
                   <li>RvB S14 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S14-OST">https://archive.org/details/RVB-S14-OST</a></li>
                   <li>RvB S15 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RVB-S15-OST">https://archive.org/details/RVB-S15-OST</a></li>
-                  <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol1CD">https://archive.org/details/RWBYVol1CD</a></li>
-                  <li>RWBY Vol. 5 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBYVol5CD">https://archive.org/details/RWBYVol5CD</a></li>
+                  <li>RWBY Vol. 1 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBY-Vol-1-Flac">https://archive.org/details/RWBY-Vol-1-Flac</a></li>
+                  <li>RWBY Vol. 2 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBY-Vol-2-FLAC">https://archive.org/details/RWBY-Vol-2-FLAC</a></li>
+                  <li>RWBY Vol. 3 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBY-Vol-3-Flac">https://archive.org/details/RWBY-Vol-3-Flac</a></li>
+                  <li>RWBY Vol. 4 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBY-Vol-4-OST-FLAC">https://archive.org/details/RWBY-Vol-4-FLAC</a></li>
+                  <li>RWBY Vol. 5 Soundtrack <br><a class="alert-link" href="https://archive.org/details/RWBY-Vol-5-Flac">https://archive.org/details/RWBY-Vol-5-Flac</a></li>
                 </ul>
               </div>
             </div>
