add lp community the five and reboot or retro

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                 </p><ul>
                   <li>Greatest Moments in Gaming History <br><a class="alert-link" href="https://archive.org/details/screw-attack-greatest-moments-in-gaming">https://archive.org/details/screw-attack-greatest-moments-in-gaming</a></li>
                   <li>The Industry <br><a class="alert-link" href="https://archive.org/details/screw-attack-the-industry">https://archive.org/details/screw-attack-the-industry</a></li>
+                  <li>Reboot or Retro <br><a class="alert-link" href="https://archive.org/details/screw-attack-reboot-or-retro">https://archive.org/details/screw-attack-reboot-or-retro</a></li>
                 </ul>
               </div>
               <div class="container frostedglass mb-3" id="com-archived">
@@ -197,7 +198,6 @@
                 </p><ul>
                   <li>ANMA Instagram <br><a class="alert-link" href="https://archive.org/details/anma-instagram">https://archive.org/details/anma-instagram</a></li>
                 </ul>
-                <hr>
               </div>
               <div class="container frostedglass mb-3" id="com-archived">
                 <!-- MISC. STUFF -->
@@ -291,6 +291,13 @@
               <div class="container mb-3 frostedglass" id="ig-archived">
                 <!-- INSIDE GAMING -->
                 <p class="fs-4 runguszone">Inside Gaming:
+                </p><ul>
+                  <li>The Five <br><a class="alert-link" href="https://archive.org/details/lp-community-the-five-rooster-teeth">https://archive.org/details/lp-community-the-five-rooster-teeth</a></li>
+                </ul>
+              </div>
+              <div class="container mb-3 frostedglass" id="lpc-archived">
+                <!-- LETSPLAY COMMUNITY -->
+                <p class="fs-4 runguszone">LetsPlay Community:
                 </p><ul>
                   <li>Shorts <br><a class="alert-link" href="https://archive.org/details/inside-gaming-shorts-rooster-teeth">https://archive.org/details/inside-gaming-shorts-rooster-teeth</a></li>
                   <li>Inside Gaming Public Livestreams <br><a class="alert-link" href="https://archive.org/details/inside-gaming-youtube-public-livestreams-rooster-teeth/Satisfactory+with+Conor!+%5BTJUL5XsVcsw%5D.mp4">https://archive.org/details/inside-gaming-youtube-public-livestreams...</a></li>
